--- a/koala.html
+++ b/koala.html
@@ -1,7 +1,4 @@
 Mammifère marsupial (phalangéridé) d'Australie, dépourvu de queue, à la fourrure dense, arboricole et nocturne. \
 (Les koalas se nourrissent des bourgeons d'eucalyptus. Décimés au xixe s. pour leur fourrure, ils font aujourd'hui l'objet d'un élevage.)
 
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet reiciendis aliquam pariatur debitis placeat quaerat, eaque eum quas voluptates earum! Necessitatibus veritatis labore tempora rem delectus? Omnis qui animi rem!
-Ipsa quam, quos molestias sit mollitia dolorum similique vel pariatur tempora, quas reiciendis non quae, ea labore assumenda corrupti repellat deleniti. Aut quasi non maiores voluptas odit enim vitae iure?
-Atque ut natus porro autem in quaerat, aperiam officia amet! In quasi cupiditate ea maiores quibusdam suscipit nobis id, cum molestiae ex possimus dolorum inventore, laborum quos. Ad, aperiam quaerat.
-Fugiat autem inventore atque reprehenderit laudantium nesciunt odio aperiam ea, quidem voluptatibus eos, mollitia laborum numquam porro excepturi libero assumenda a minus ipsa. Nihil voluptates repellendus ipsa maiores fugiat voluptatibus?
+Lorem ipsum, dolor sit amet consassumenda a minus ipsa. Nihil voluptates repellendus ipsa maiores fugiat voluptatibus?
