--- a/koala.html
+++ b/koala.html
@@ -17,4 +17,4 @@ Mammifère marsupial (phalangéridé) d'Australie, dépourvu de queue, à la fou
 
 ## Conservation Status
 - Décimés au xixe s. pour leur fourrure
-- Font aujourd'hui l'objet d'un élevagea
+- Font aujourd'hui l'objet d'un élevage
